# World-Model-Selective-Verification

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-06-28-boxoban-kill-or-continue.md  2026-06-29-gate-model-ablation.md  2026-07-01-main-experiment-protocol-v1.md
docs/proposals/: 2026-06-28-world-model-selective-verification-proposal-v0.md
experiments/boxoban_kill_or_continue_v0/: README.md
experiments/phase1_dual_pilot/: README.md
notes/: 2026-06-28-external-review-summary.md  2026-06-28-opus-review-boxoban-plan.md  2026-06-28-opus-review-stage-a-budget-sweep.md  2026-06-28-opus-review-stage-a-results.md  2026-06-28-opus-review-uniform-true-baseline.md  2026-06-29-external-review-after-uniform-true-diagnostic.md
scripts/: run_boxoban_gate_ablation.py  run_boxoban_gate_diagnostics.py  run_boxoban_learned_pilot.py  run_maze_learned_pilot.py  run_phase1_budget_curves.py  run_stage_a_smoke.py  summarize_main_curves.py  summarize_stage_a_ci.py
tests/analysis/: test_bootstrap.py  test_budget_curves.py  test_budgeting.py  test_feasibility.py  test_gate_diagnostics.py  test_stage_a_labels.py  test_uncertainty.py  test_verification_value.py
tests/data/: test_boxoban.py  test_generated_sokoban.py  test_transitions.py
tests/envs/: test_point_maze.py  test_sokoban.py
tests/gating/: test_dive.py  test_feature_sets.py  test_simple_gate.py
tests/models/: test_linear_dynamics.py  test_sokoban_memory.py
tests/pilots/: test_boxoban_pilot.py  test_maze_pilot.py
tests/planning/: test_beam.py  test_shooting.py
wmsv/: __init__.py
wmsv/data/: boxoban.py  (+2 more)
(+36 files in other folders)
